# pygame-particles

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  README.rst  pyproject.toml  setup.py
docs/: requirements.txt
docs/source/: basics.rst  code.rst  conf.py  examples.rst  index.rst  installing.rst  intro.rst
docs/source/basics/: container.py  particle.py  shape.py
examples/: 1.py  1.txt  2.py  2.txt
pygame_particles/: __init__.py  container.py  examples.py  particle.py  shape.py
