[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pygame-particles"
version = "1.1"
authors = [
    { name = "Vitness" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pygame",
]


[project.urls]
"Homepage" = "https://github.com/VitnessYT/pygame-particles"
"Bug Tracker" = "https://github.com/VitnessYT/pygame-particles/issues"